# TelekomApp

./: README.md  docker-compose.yml
client/: .env.development  Dockerfile  components.d.ts  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.vue  Home.vue  Login.vue  main.js  utils.js
client/src/api/: AccountApi.js  EquipmentApi.js  EquipmentTypeApi.js  api-client.js
client/src/equipment/: EquipmentPage.vue
client/src/equipment/forms/: CreateEquipmentForm.vue  EditEquipmentForm.vue
client/src/scripts/: auth.js  router.js
server/: .dockerignore  .env.production  Dockerfile  pyproject.toml
server/alembic_migrations/: alembic.ini
server/alembic_migrations/script/: env.py
server/alembic_migrations/script/versions/: 03a1f74f76e1_equipment__unique_constraint.py  3c0901c4eff5_initial.py  d1b532af91db_equipment__is_deleted.py  ed2c39b6387f_identity.py
server/app/: __main__.py  container.py  database.py  dependencies.py  models.py  roles.py  settings.py  tables.py
server/app/controllers/: __init__.py  account.py  equipment.py  equipment_type.py  utils.py
server/app/models/: __init__.py  auth.py  equipment.py  pagination.py
server/app/services/: __init__.py  auth_service.py  equipment_service.py  equipment_type_service.py  prefill_service.py
server/app/tables/: __init__.py  auth.py  equipment.py
server/app/tools/: __init__.py  auth.py  cors.py  exception_handlers.py  pydantic_dump.py
server/resources/: equipment_types.json
