[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Александр Окунев <frozz.way@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cherrypy = "^18.10.0"
pydantic = "^2.11.4"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
dependency-injector = "^4.46.0"
tzdata = "^2025.2"
pydantic-settings = "==2.9.1"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

